--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "workplus-query-string",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Parse and stringify URL",
   "main": "index.js",
   "scripts": {
     "prepublish": "npm test",
-    "test": "ava"
+    "test": "ava test/index.js",
+    "pretest": "npm run build",
+    "build": "rollup index.js --output test/workplus-query-string.js --format cjs"
   },
   "repository": {
     "type": "git",
