--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "workplus-query-string",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Parse and stringify URL",
-  "main": "index.js",
+  "main": "lin/workplus-query-string.js",
   "scripts": {
     "prepublish": "npm test",
     "test": "ava test/index.js",
     "pretest": "npm run build",
-    "build": "rollup index.js --output test/workplus-query-string.js --format cjs"
+    "build": "rollup index.js --output lib/workplus-query-string.js --format cjs"
   },
   "repository": {
     "type": "git",
