--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "workplus-query-string",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Parse and stringify URL",
   "main": "lib/workplus-query-string.js",
+  "jsnext:main": "lib/workplus-query-string.mjs",
   "scripts": {
-    "prepublish": "npm test",
     "test": "ava test/index.js",
     "pretest": "npm run build",
-    "build": "rollup index.js --output lib/workplus-query-string.js --format cjs"
+    "build": "rollup -c",
+    "watch": "rollup -c -w",
+    "prepublish": "npm test"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,14 @@
   "homepage": "https://github.com/WorkPlusFE/workplus-query-string#readme",
   "devDependencies": {
     "ava": "^0.17.0",
-    "rollup": "^0.36.3"
+    "rollup": "^0.36.4",
+    "babel-eslint": "^6.1.2",
+    "babel-plugin-external-helpers": "^6.8.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-register": "^6.11.6",
+    "babelrc-rollup": "^3.0.0",
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-istanbul": "^1.0.0",
+    "rollup-watch": "^2.5.0"
   }
 }
