--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "workplus-query-string",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Parse and stringify URL",
   "main": "lib/workplus-query-string.js",
-  "jsnext:main": "lib/workplus-query-string.mjs",
+  "jsnext:main": "lib/workplus-query-string.esm.js",
   "scripts": {
     "test": "ava test/index.js",
     "pretest": "npm run build",
